"Added new features and bug fixes"

--- a/Ecommerce MVC/appsettings.json
+++ b/Ecommerce MVC/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "StoreDB" : "Data Source=.;Initial Catalog=BookoriaDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=true;"
+  }
 }
